<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />

    <!-- REMOVED categoriesFragment -->

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorites" />

    <item
        android:id="@+id/shoppingListFragment"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:title="@string/shopping" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>
